# C-COMPASS

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: bundle.yml  ci.yaml  deploy_release.yml  release_assets.yml
CCMPS/: CCMPS.py  CCMPS_actions.py  FDP.py  MOA.py  MOP_stats.py  NPC.py  NPC_func.py  PPMS.py  PPMS_actions.py  RP.py  SM.py  SOP.py  TM.py
doc/: changelog.rst  citation.rst  conf.py  faq.rst  index.rst  installation.rst  license.rst  usage.rst
docs/: conf.py  contributing.rst  faq.rst  index.rst  installation.rst  license.rst  preparation.rst  usage.rst
src/ccompass/: CCMPS.py  CCMPS_actions.py  CM.py  FDP.py  FSD.py  MOA.py  MOP.py  MOP_stats.py  NPC.py  NPC_func.py  PPMS.py  PPMS_actions.py  RP.py  SM.py  SOP.py  TM.py  TPP.py  __init__.py  __main__.py  _utils.py  about_dialog.py  class_manager_dialog.py  classification_model.py  core.py  fractionation_parameters_dialog.py  main_gui.py  marker_correlation_dialog.py  marker_parameters_dialog.py  marker_profiles_dialog.py  total_proteome_parameters_dialog.py  training_parameters_dialog.py
src/ccompass/_testing/: __init__.py  synthetic_data.py
tests/: sim_TotalProteome.txt  synthdat.py  test_full_analysis.py  test_misc.py  test_sample_data.py  test_session_model.py
