[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccompass"
version = "1.0.0"
description = "C-COMPASS (Cellular COMPartmentclASSifier) is an advanced open-source software tool designed for the quantitative analysis of fractionated proteomics samples."
authors = [
    { name = "Daniel Haas", email = "daniel.haas@helmholtz-munich.de" }
]
dependencies = [
    "keras",
    "keras-tuner",
    "matplotlib",
    "numpy",
    "pandas",
    "tensorflow",
    "scikit-learn",
    "scipy",
    "seaborn",
    "FreeSimpleGUI",
]
requires-python = ">=3.10"

[project.scripts]
ccompass = "ccompass.CCMPS:main"

[project.optional-dependencies]
dev = ["pre-commit>=3"]


[tool.ruff]
line-length = 79
lint.ignore = [
    "E712",  # Avoid equality comparisons to True/False
]
